# etic

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/etic/: __init__.py  config.yml
